--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,41 @@
     background: #2d3436;
 }
 
+.upperNav {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2rem;
+    background: #F4FCFF;
+}
+
 .listItems {
     color: #fff;
 }
 
 .listItems:hover {
     color: #fff;
+}
+
+.headerImage1 {
+    width: 50px;
+
+}
+
+.headerImage2 {
+    width: 300px;
+}
+
+.headerImage3 {
+    width: 100px;
+}
+
+.landingBanner {
+    height: 100vh;
+    background-position: center;
+    object-fit: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .box {
@@ -109,4 +138,121 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
+    background: #2d3436;
+
+}
+
+.footerItems {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+}
+
+.mapButtons {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 1.5rem;
+    background: #2e86de;
+}
+
+.mapData {
+    border: none;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    background: #1dd1a1;
+    color: #576574;
+}
+
+.formSubmit {
+    border: 1px solid #000;
+    padding: 0.5rem 1.5rem;
+    margin-bottom: 1rem;
+    background: #a29bfe;
+}
+
+@media (max-width: 767px) {
+    .landingBanner {
+        height: 30vh;
+    }
+
+    .footer {
+        height: auto;
+    }
+
+    .mapButtons,
+    .footerItems {
+        flex-direction: column;
+    }
+
+    .mapButtons {
+        width: 100%;
+    }
+
+    .footerItems {
+        gap: 1rem;
+        padding: 1rem 0;
+    }
+
+    .mapData {
+        width: 100%;
+        margin: 1rem 0;
+    }
+
+    .box {
+        width: 90%;
+    }
+
+    .headerImage1 {
+        width: 50px;
+
+    }
+
+    .headerImage2 {
+        width: 150px;
+    }
+
+    .headerImage3 {
+        width: 100px;
+    }
+
+    .upperNav {
+        justify-content: space-between;
+    }
+
+    .navItem {
+        gap: 1rem;
+    }
+
+    .aboutSection,
+    .formSection {
+        height: auto;
+    }
+
+    .aboutHead {
+        padding-top: 1rem;
+    }
+
+    .aboutPara,
+    .aboutUl {
+        width: 90%;
+    }
+
+    .formBox {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .formHead {
+        padding-top: 2rem;
+    }
+
 }
