--- a/src/App.css
+++ b/src/App.css
@@ -42,12 +42,52 @@
     background-attachment: fixed;
 }
 
+.refund-page {
+    min-height: 500px !important;
+    /* width: 100%; */
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('./images/courses.jpg');
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+
+}
+
 .upperNav {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     padding: 2rem;
     background: #F4FCFF;
+}
+
+.jobSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 1200px;
+}
+
+td,
+th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+.applyNow {
+    border: none;
+    background-color: #f59620;
+    padding: 0.5rem 1.3rem;
+    color: #fff;
+    border-radius: 6px;
+}
+
+.rightText {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .listItems {
@@ -124,6 +164,14 @@
     align-items: center;
     height: 1000px;
     background-color: #a29bfe;
+}
+
+.refundSection {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+
 }
 
 .parentForm {
