--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@
 .landing-about-section {
     /* width: 50%; */
     color: #fff;
-    min-height: 400px !important;
+    height: 400px;
     opacity: 0.9;
     background-image: url('./images/table.jpg');
     background-size: cover;
@@ -110,12 +110,16 @@
     background: #F4FCFF;
 }
 
+table {
+    width: 100%;
+}
+
 .jobSection {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 1200px;
-    background-image: url('./images/upper.jpg');
+    background: rgba(255, 255, 255, .6);
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
@@ -131,7 +135,7 @@ th {
 
 .applyNow {
     border: none;
-    background-color: #f59620;
+    background-color: #26335d;
     padding: 0.5rem 1.3rem;
     color: #fff;
     border-radius: 6px;
@@ -220,6 +224,19 @@ th {
     align-items: center;
     height: 1000px;
     background-color: #a29bfe;
+}
+
+.footerLinkTag {
+    color: #fff;
+}
+
+.footerLinkTag:hover {
+    color: #fff;
+}
+
+.tableFlow {
+    overflow-x: auto;
+    width: 100%;
 }
 
 .refundSection {
@@ -401,6 +418,23 @@ th {
 
     .formHead {
         padding-top: 2rem;
+    }
+
+    .jobSection {
+        height: auto;
+        padding: 2rem 0;
+    }
+
+    .rightText {
+        align-items: flex-start;
+    }
+
+    .inner-grid img {
+        width: 150px;
+    }
+
+    .landing-about-section {
+        height: 300px;
     }
 
 }
