--- a/src/contact.css
+++ b/src/contact.css
@@ -2,6 +2,9 @@
     color: #6F8BA4;
     padding: 3rem 0;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .gray-bg {
