--- a/src/login.css
+++ b/src/login.css
@@ -14,10 +14,11 @@
     background: #FFFFFF;
     box-shadow: 1px 2px 5px 2px rgba(0, 0, 0, 0.1);
     border-radius: 6px;
-    width: 31%;
+    max-width: 35%;
     margin: auto;
-    height: 350px;
+    height: auto;
     margin-bottom: 10px;
+    padding: 1rem;
 }
 
 .signupHeader {
