--- a/src/login.css
+++ b/src/login.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 588px;
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('./images/about.jpg');
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('./public/images/banner.jpg');
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
