--- a/src/App.css
+++ b/src/App.css
@@ -428,6 +428,19 @@ th {
     height: 100vh;
 }
 
+.follow-icon {
+    font-size: 2rem;
+    padding: 0 1rem;
+    cursor: pointer;
+}
+
+.follow-icon1 {
+    font-size: 1.8rem;
+    padding-right: 1rem;
+    cursor: pointer;
+
+}
+
 @media (max-width: 767px) {
     .landingBanner {
         height: 30vh;
