--- a/src/App.css
+++ b/src/App.css
@@ -106,6 +106,13 @@ input {
 
 }
 
+.count {
+    border: 1px solid #000;
+    padding: 0.5rem 1rem;
+    border-radius: 3px;
+    width: 11%;
+}
+
 .upperNav {
     display: flex;
     justify-content: space-between;
