--- a/src/App.css
+++ b/src/App.css
@@ -18,14 +18,12 @@
 }
 
 .home-page {
-    min-height: 200px !important;
-    /* width: 100%; */
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.jpg');
+    min-height: 250px !important;
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.png');
     background-size: cover;
-    background-position: center top;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    object-fit: cover;
+    width: 100%;
 
 }
 
@@ -34,36 +32,30 @@ input {
 }
 
 .about-page {
-    min-height: 200px !important;
-    /* width: 100%; */
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.jpg');
+    min-height: 250px !important;
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.png');
     background-size: cover;
-    background-position: center top;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    object-fit: cover;
+    width: 100%;
 }
 
 .contact-page {
-    min-height: 200px !important;
-    /* width: 100%; */
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.jpg');
+    min-height: 250px !important;
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.png');
     background-size: cover;
-    background-position: center top;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    object-fit: cover;
+    width: 100%;
 }
 
 .refund-page {
-    min-height: 200px !important;
-    /* width: 100%; */
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.jpg');
+    min-height: 250px !important;
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.png');
     background-size: cover;
-    background-position: center top;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
-    object-fit: cover;
+    width: 100%;
 
 }
 
@@ -95,8 +87,8 @@ input {
 }
 
 .inner-grid img {
-    margin-top: 25px;
-    width: 300px;
+    /* margin-top: 25px; */
+    width: 250px;
     padding: 10px;
     transition: 0.3s;
 }
@@ -322,19 +314,16 @@ th {
 
 .aboutPara {
     font-size: 1.2rem;
-    padding: 1.5rem 0;
+    padding: 0.1rem 0;
 }
 
 .aboutUl {
-    /* width: 70%;
-    margin: auto; */
     padding-left: 0rem;
 }
 
 .aboutUl li {
     font-size: 1.2rem;
-    padding: 1rem 0;
-    list-style: none;
+    padding: 0.5rem 0;
 }
 
 .formBox {
@@ -343,8 +332,18 @@ th {
     align-items: center;
 }
 
-.footerPart {
+.odomter-span {
+    border: 1px solid #fff;
+    padding: 0.5rem;
     color: #fff;
+    background: #000;
+}
+
+.noOfVisitors {
+    color: #000;
+    text-align: center;
+    padding-bottom: 0.5rem;
+    font-weight: 800;
 }
 
 .footer {
@@ -459,6 +458,7 @@ th {
 
 .follow-head {
     margin-right: 2rem;
+    margin-top: 0.8rem;
 }
 
 .linkFooterItem {
@@ -478,21 +478,46 @@ th {
     height: 100vh;
 }
 
-.follow-icon {
-    font-size: 1.5rem;
-    padding: 0 1rem;
-    cursor: pointer;
-}
 
 .linkNow {
     margin-left: 1.7rem;
 }
 
 .follow-icon1 {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     padding-right: 1rem;
     cursor: pointer;
 
+}
+
+.follow-icon {
+    font-size: 1.8rem;
+    padding: 0 1rem;
+    cursor: pointer;
+}
+
+.myApp {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px;
+    background: #f7f7f7;
+}
+
+.myAppHead {
+    color: white;
+    background-color: #cc2425;
+    padding: 1rem;
+    width: 20%;
+}
+
+.myAppPara {
+    margin-bottom: 0rem;
+}
+
+.myAppTable {
+    background: white;
+    padding: 1.5rem;
 }
 
 @media (max-width: 767px) {
