--- a/src/login.css
+++ b/src/login.css
@@ -3,11 +3,12 @@
     justify-content: center;
     align-items: center;
     height: 588px;
-    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('./public/images/banner.jpg');
+    background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('../public/images/banner.png');
     background-size: cover;
-    background-position: center top;
+    background-position: center;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    width: 100%;
+
 }
 
 .formLayout {
