Fix in Multipart Form Data

--- a/src/App.css
+++ b/src/App.css
@@ -558,6 +558,17 @@ th {
     padding: 0.5rem 1rem;
 }
 
+.dynamic_data {
+    color: #f59620;
+}
+
+.file {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 2rem 0;
+}
+
 @media (max-width: 767px) {
     .myAppHead {
         width: 100%;
