--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,18 @@ input {
     padding: 2rem;
     background: #F4FCFF;
 }
-
+.qrCode{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+.notice{
+    color: red;
+    padding: 1rem 0;
+    text-align: center;
+    font-weight: 700;
+}
 table {
     width: 100%;
 }
@@ -616,6 +627,9 @@ th {
 }
 
 @media (max-width: 767px) {
+    .qrCode{
+        height: auto;
+    }
     .myAppform {
         width: 100%;
         height: 100vh;
@@ -739,6 +753,13 @@ th {
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
+    .qrCode{
+        height: auto;
+        padding: 1rem 0;
+    }
+    .qrCodeForm{
+        padding: 2rem 0;
+    }
     .noty {
         height: 500px;
     }
