--- a/src/App.css
+++ b/src/App.css
@@ -255,7 +255,7 @@ th {
     justify-content: center;
     align-items: center;
     height: 650px;
-    background-color: #a29bfe;
+    /* background-color: #a29bfe; */
 }
 
 .outerGallery {
