--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,11 @@
     background: #cc2425;
 }
 
+td,
+th {
+    min-width: 150px;
+}
+
 .home-page {
     min-height: 250px !important;
     background-image: linear-gradient(rgba(9, 5, 54, 0.3), rgba(5, 4, 46, 0.7)), url('/images/banner.png');
@@ -119,30 +124,36 @@ input {
     padding: 2rem;
     background: #F4FCFF;
 }
-.qrCode{
+
+.qrCode {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
 }
-.notice{
+
+.notice {
     color: red;
     padding: 1rem 0;
     text-align: center;
     font-weight: 700;
 }
+
 table {
     width: 100%;
 }
-.fpciinstpdf{
+
+.fpciinstpdf {
     margin-bottom: 0rem;
     padding: 0.5rem 0;
 }
-.downloadFPCIpdf{
+
+.downloadFPCIpdf {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .jobSection {
     display: flex;
     justify-content: center;
@@ -627,9 +638,10 @@ th {
 }
 
 @media (max-width: 767px) {
-    .qrCode{
+    .qrCode {
         height: auto;
     }
+
     .myAppform {
         width: 100%;
         height: 100vh;
@@ -753,13 +765,15 @@ th {
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
-    .qrCode{
+    .qrCode {
         height: auto;
         padding: 1rem 0;
     }
-    .qrCodeForm{
+
+    .qrCodeForm {
         padding: 2rem 0;
     }
+
     .noty {
         height: 500px;
     }
